[icloud] Implemented TrustManager for icloud-binding (#3919)
* [icloud] Implemented TrustManager for icloud-binding

Fixes #3762

Signed-off-by: Martin van Wingerden <martin@martinvw.nl>
Signed-off-by: Arjen Korevaar <a.korevaar@mephix.com>