@@ -8,15 +8,14 @@
  */
 package org.openhab.binding.icloud.internal;
 
-import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.time.Duration;
 import java.util.Base64;
-import java.util.Properties;
 
-import org.eclipse.smarthome.io.net.http.HttpUtil;
+import org.eclipse.smarthome.io.net.http.HttpRequestBuilder;
 import org.openhab.binding.icloud.internal.json.request.ICloudAccountDataRequest;
 import org.openhab.binding.icloud.internal.json.request.ICloudFindMyDeviceRequest;
 
@@ -29,27 +28,27 @@ import com.google.gson.GsonBuilder;
  *
  * @author Patrik Gfeller - Initial Contribution
  * @author Patrik Gfeller - SOCKET_TIMEOUT changed from 2500 to 10000
+ * @author Martin van Wingerden - add support for custom CA of https://fmipmobile.icloud.com
  */
 public class ICloudConnection {
     private static final String ICLOUD_URL = "https://www.icloud.com";
-    private static final String ICLOUD_API_URL = "https://fmipmobile.icloud.com/fmipservice/device/";
+    private static final String ICLOUD_API_BASE_URL = "https://fmipmobile.icloud.com";
+    private static final String ICLOUD_API_URL = ICLOUD_API_BASE_URL + "/fmipservice/device/";
     private static final String ICLOUD_API_COMMAND_PING_DEVICE = "/playSound";
     private static final String ICLOUD_API_COMMAND_REQUEST_DATA = "/initClient";
-    private static final int SOCKET_TIMEOUT = 10000;
+    private static final int SOCKET_TIMEOUT = 10;
 
     private final Gson gson = new GsonBuilder().create();
     private final String iCloudDataRequest = gson.toJson(ICloudAccountDataRequest.defaultInstance());
 
-    private final Properties httpHeader;
-    private final URL iCloudDataRequestURL;
-    private final URL iCloudFindMyDeviceURL;
+    private final String authorization;
+    private final String iCloudDataRequestURL;
+    private final String iCloudFindMyDeviceURL;
 
-    public ICloudConnection(String appleId, String password)
-            throws MalformedURLException, UnsupportedEncodingException {
-        byte[] authorization = Base64.getEncoder().encode((appleId + ":" + password).getBytes());
-        iCloudDataRequestURL = new URL(ICLOUD_API_URL + appleId + ICLOUD_API_COMMAND_REQUEST_DATA);
-        iCloudFindMyDeviceURL = new URL(ICLOUD_API_URL + appleId + ICLOUD_API_COMMAND_PING_DEVICE);
-        httpHeader = createHttpHeader(authorization);
+    public ICloudConnection(String appleId, String password) throws UnsupportedEncodingException, URISyntaxException {
+        authorization = new String(Base64.getEncoder().encode((appleId + ":" + password).getBytes()), "UTF-8");
+        iCloudDataRequestURL = new URI(ICLOUD_API_URL + appleId + ICLOUD_API_COMMAND_REQUEST_DATA).toASCIIString();
+        iCloudFindMyDeviceURL = new URI(ICLOUD_API_URL + appleId + ICLOUD_API_COMMAND_PING_DEVICE).toASCIIString();
     }
 
     /***
@@ -58,31 +57,30 @@ public class ICloudConnection {
      * @throws IOException
      */
     public void findMyDevice(String id) throws IOException {
-        String iCloudFindMyDeviceRequest = gson.toJson(new ICloudFindMyDeviceRequest(id));
-        HttpUtil.executeUrl("POST", iCloudFindMyDeviceURL.toString(), httpHeader,
-                new ByteArrayInputStream(iCloudFindMyDeviceRequest.getBytes("UTF-8")), "application/json",
-                SOCKET_TIMEOUT);
+        callApi(iCloudFindMyDeviceURL, gson.toJson(new ICloudFindMyDeviceRequest(id)));
     }
 
     public String requestDeviceStatusJSON() throws IOException {
-        return HttpUtil.executeUrl("POST", iCloudDataRequestURL.toString(), httpHeader,
-                new ByteArrayInputStream(iCloudDataRequest.getBytes("UTF-8")), "application/json", SOCKET_TIMEOUT);
+        return callApi(iCloudDataRequestURL, iCloudDataRequest);
     }
 
-    private Properties createHttpHeader(byte[] authorization) throws UnsupportedEncodingException {
-        Properties httpHeader = new Properties();
-
-        httpHeader.setProperty("Authorization", "Basic " + new String(authorization, "UTF-8"));
-        httpHeader.setProperty("User-Agent", "Find iPhone/1.3 MeKit (iPad: iPhone OS/4.2.1)");
-        httpHeader.setProperty("Origin", ICLOUD_URL);
-        httpHeader.setProperty("charset", "utf-8");
-        httpHeader.setProperty("Accept-language", "en-us");
-        httpHeader.setProperty("Connection", "keep-alive");
-        httpHeader.setProperty("X-Apple-Find-Api-Ver", "2.0");
-        httpHeader.setProperty("X-Apple-Authscheme", "UserIdGuest");
-        httpHeader.setProperty("X-Apple-Realm-Support", "1.0");
-        httpHeader.setProperty("X-Client-Name", "iPad");
-
-        return httpHeader;
+    private String callApi(String url, String payload) throws IOException {
+        // @formatter:off
+        return HttpRequestBuilder.postTo(url)
+            .withTimeout(Duration.ofSeconds(SOCKET_TIMEOUT))
+            .withHeader("Authorization", "Basic " + authorization)
+            .withHeader("User-Agent", "Find iPhone/1.3 MeKit (iPad: iPhone OS/4.2.1)")
+            .withHeader("Origin", ICLOUD_URL)
+            .withHeader("charset", "utf-8")
+            .withHeader("Accept-language", "en-us")
+            .withHeader("Connection", "keep-alive")
+            .withHeader("X-Apple-Find-Api-Ver", "2.0")
+            .withHeader("X-Apple-Authscheme", "UserIdGuest")
+            .withHeader("X-Apple-Realm-Support", "1.0")
+            .withHeader("X-Client-Name", "iPad")
+            .withHeader("Content-Type", "application/json")
+            .withContent(payload)
+            .getContentAsString();
+        // @formatter:on
     }
 }
